# aereo

./: .code-quality-modules.txt  .code-quality-progress.txt  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  benchmark.py  check_grid.py  debug_plot.py  debug_tight.py  example_hamilton_integration.py  example_hamilton_parallel_processors.py  example_hamilton_pipeline_compiler.py  example_hamilton_real_world.py  global_grid.idx  index.html  last_session.md  mkdocs.yml  objects.inv  progress.txt  pyproject.toml  restore.py  scratch.py  setup.sh  sitemap.xml  test_capabilities.py  test_plugins.py  test_single_ax.py  workspace.toml
.agents/rules/: rules.md  uv_testing.md
.agents/scripts/: create_plugin.py  release.py
.agents/workflows/: codebase-mapper.md  execute-task.md  poly-create.md
.binder/: postBuild  requirements.txt
.github/rulesets/: main-branch.json  release-tags.json
.github/workflows/: ci.yml  docs.yml  integration.yml  license-check.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.ralph-tui/: config.toml
aer-architecture-visualization/: index.html
api/asset_downloader/: index.html
api/client/: index.html
api/eoids/: index.html
api/grid/: index.html
api/interfaces/: index.html
api/registry/: index.html
api/repository/: index.html
api/schemas/: index.html
api/spatial/: index.html
api/spectral/: index.html
api/viz/: index.html
assets/orphaned/: codemap.csv
build-your-own-plugin/: index.html
cli/: index.html
components/aereo/: discovery.py  gdal_env.py
components/aereo_extract/: __init__.py  handlers.py  runtime.py
conductor/: plan.md
contributing/: index.html
contributing/dev-setup/: index.html
development/: configure_rulesets.sh
development/local/: oscar.py  test_earthaccess_http_download.py  test_integration_goes.py  test_integration_modis.py  test_integration_sentinel3.py
docs/: aer-architecture-visualization.md  architecture-overview.md  build-first-plugin.md  build-your-own-plugin.md  cli-recipes.md  cli.md  contributing.md  eoids.md  examples-gallery.md  examples.md  execution-backends.md  execution.md  first-pipeline.md  five-minutes.md  grid.md  grids.md  how-to.md  index.md  install.md  installation.md  output-formats.md  pipeline-architecture.md  pipeline-options.md  pipeline.md  plugin-advanced.md  plugin-overview.md  plugins.md  quickstart.md  troubleshooting.md  using-plugins.md
docs/api/: asset_downloader.md  backends.md  builtins.md  cache.md  cli.md  client.md  eoids.md  executors.md  grid.md  interfaces.md  lambda_handler.md  pipeline.md  registry.md  repository.md  schemas.md  serialization.md  spatial.md  spectral.md  task_builder.md  viz.md
docs/architecture/: architecture-overview.md  architecture-visual.md  index.md
docs/concepts/: grids.md  output-formats.md  pipeline-architecture.md  pipeline-walkthrough.md
docs/configuration/: config-package.md  overrides.md  yaml-schema.md
docs/contributing/: dev-setup.md
docs/examples/: index.md
docs/getting-started/: concepts.md  first-pipeline.md  pure-python.md
docs/hooks/: copy_notebooks.py  export_notebook_images.py
docs/includes/: abbreviations.md
docs/overrides/: main.html
docs/plugins/: build-a-plugin.md  (+4 more)
eoids/: index.html
examples/: 01-sentinel2.ipynb  01b-sentinel2-ndvi.ipynb  01c-sentinel2-ndwi.ipynb  02-viirs.ipynb  03-sentinel3.ipynb  03b-sentinel3-ndvi.ipynb  04-tessera.ipynb  05-goes19.ipynb  06-swath-to-geobox-odc-vs-faiss.ipynb  06b-viirs-swath-odc-vs-faiss.ipynb  README.md  basic_extract.py  basic_search.py  batch_writer_example.py  buenos_aires_city.geojson  goes_abi_extraction.ipynb  index.html  major.ipynb  modis_terra_extraction.ipynb  multi_constellation_visualization.ipynb  pipeline.yaml  planetary_computer_s2.py  profiles.json  profiles.yaml  quickstart_pure_python.py  run_all_examples.py  run_neuquen_extraction.py  sentinel2_msi_extraction.ipynb  sentinel3_olci_extraction.ipynb  step_by_step.ipynb  step_by_step_raw.ipynb  viirs_extraction.ipynb
execution/: index.html
grid/: index.html
pipeline/: index.html
pipeline-architecture/: index.html
plugins/: index.html
projects/aer-core/: README.md  pyproject.toml
projects/aer-downloader-aria2/: README.md  pyproject.toml
projects/aer-lambda/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/aer-product-goes-aws/: pyproject.toml
projects/aer-product-modis-earthaccess/: pyproject.toml
projects/aer-product-viirs-earthaccess/: pyproject.toml
projects/aer-search-earthaccess/: pyproject.toml
projects/aer-search-goes-aws/: pyproject.toml
projects/aer-spectral-modis/: pyproject.toml
projects/aer-spectral-sentinel3/: pyproject.toml
projects/aer_core/: pyproject.toml
projects/aer_search_earthaccess/: pyproject.toml
projects/aereo/: README.md  pyproject.toml
projects/aereo-batch/: Dockerfile  Dockerfile.adddeps  Dockerfile.adddeps2  Dockerfile.adddeps3  Dockerfile.addmajortom  Dockerfile.simple  README.md  deploy.sh  infrastructure.yaml  pyproject.toml
projects/aereo-extract/: Dockerfile.base  pyproject.toml
projects/aereo-lambda/: DEPLOYMENT.md  DEPLOYMENT_DETAILED.md  Dockerfile  Dockerfile.local  README.md  deploy.sh  docker-compose.yml  infrastructure.yaml  pyproject.toml  template.yaml  test_local_lambda.py
projects/aereo-lambda/events/: extraction-task.json
projects/aereo-lambda/test_extractor/: pyproject.toml
projects/aereo-lambda/test_extractor/test_extractor/: core.py
projects/aereo-lambda/test_pipeline/: pyproject.toml
projects/aereo-lambda/test_pipeline/src/test_pipeline/: __init__.py  core.py
projects/aereo-lambda/test_pipeline/tests/: test_test_pipeline.py
quickstart/: index.html
scripts/: check_licenses.py  scrape_wmo_oscar_channels.py
search/: search_index.json
troubleshooting/: index.html
using-plugins/: index.html
(+896 files in other folders)
