[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "aer"
version = "1.0.0"
description = "Modular satellite data discovery, extraction, and processing framework"
readme = "README.md"
keywords = [ "aer", "earth-observation", "plugin", "remote-sensing", "satellite" ]
license = "Apache-2.0"
authors = [ { name = "Francisco Dorr" } ]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "attrs>=25.4",
  "cattrs>=26.1",
  "geopandas>=1.1.2",
  "majortom-eg",
  "odc-geo>=0.5.1",
  "openpyxl>=3.1.5",
  "pandas>=3.0.1",
  "pandera[geopandas]>=0.24",
  "pyarrow>=23.0.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "pyhdf>=0.11.6",
  "pyresample>=1.35",
  "python-geotiepoints>=1.9",
  "pyyaml>=6.0.3",
  "returns[compatible-mypy]>=0.26",
  "rtree>=1.4.1",
  "s3fs>=2025.2",
  "scikit-learn>=1.8",
  "shapely>=2.1.2",
  "structlog>=25.5",
  "utm>=0.8.1",
]
optional-dependencies.aws-goes = [ "aer-search-aws-goes>=2" ]
optional-dependencies.docs = [ "mkdocs-material>=9", "mkdocs-minify-plugin>=0.8", "mkdocstrings[python]>=0.24" ]
optional-dependencies.earthaccess = [ "aer-search-earthaccess>=1.1.1" ]
urls.Documentation = "https://frandorr.github.io/aer"
urls.Homepage = "https://github.com/frandorr/aer"
urls.Issues = "https://github.com/frandorr/aer/issues"
urls.Repository = "https://github.com/frandorr/aer"

[dependency-groups]
dev = [
  "aer-extract-aws-goes",
  "aer-extract-odc-stac",
  "aer-extract-satpy",
  "aer-search-aws-goes>=2",
  "aer-search-earthaccess>=2.0.3,<3",
  "aer-search-planetary-computer",
  "basedpyright>=1.38",
  "cartopy>=0.25",
  "graphviz>=0.21",
  "icechunk>=2.0.3",
  "ipykernel>=7.2",
  "jupyter>=1.1.1",
  "marimo[mcp]>=0.21.1",
  "matplotlib>=3.10.8",
  "nbformat>=5.10.4",
  "obstore>=0.9.3",
  "polylith-cli>=1.42.5,<2",
  "pytest>=9.0.2,<10",
  "python-semantic-release>=10.5.3,<11",
  "rasterio>=1.5",
  "rioxarray>=0.22",
  "satpy>=0.59",
  "types-requests>=2.32.4.20260107,<3",
  "virtualizarr>=2.4",
  "xarray>=2026.4",
]

[tool.hatch]
build.dev-mode-dirs = [ "components", "bases", "development", "../majortom", "." ]
metadata.allow-direct-references = true

[tool.uv]
sources.aer-eo = { path = "projects/aer-core", editable = true }
sources.aer-extract-aws-goes = { path = "../aer-extract-aws-goes/projects/aer-extract-aws-goes", editable = true }
sources.aer-extract-odc-stac = { path = "../aer-extract-odc-stac/projects/aer-extract-odc-stac", editable = true }
sources.aer-extract-satpy = { path = "../aer-extract-satpy/projects/aer-extract-satpy", editable = true }
sources.aer-search-aws-goes = { path = "../aer-search-aws-goes/projects/aer-search-aws-goes", editable = true }
sources.aer-search-earthaccess = { path = "../aer-search-earthaccess/projects/aer-search-earthaccess", editable = true }
sources.aer-search-planetary-computer = { path = "../aer-search-planetary-computer/projects/aer-search-planetary-computer", editable = true }
managed = true
workspace.members = [ "projects/*" ]

[tool.pytest]
ini_options.markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
pythonVersion = "3.12"
autoImportCompletions = true
useLibraryCodeForTypes = true
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingImports = false
extraPaths = [ "components", "bases", "development" ]

[tool.polylith]
bricks."components/aer/data" = "aer/data"
bricks."components/aer/eoids" = "aer/eoids"
bricks."components/aer/grid" = "aer/grid"
bricks."components/aer/interfaces" = "aer/interfaces"
bricks."components/aer/registry" = "aer/registry"
bricks."components/aer/repository" = "aer/repository"
bricks."components/aer/schemas" = "aer/schemas"
bricks."components/aer/spatial" = "aer/spatial"
bricks."components/aer/spectral" = "aer/spectral"
bricks."components/aer/asset_downloader" = "aer/asset_downloader"
bricks."bases/aer/client" = "aer/client"
