[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "aereo-workspace"
version = "1.0.0"
description = "Modular satellite data discovery, extraction, and processing framework"
readme = "README.md"
keywords = [ "aereo", "earth-observation", "plugin", "remote-sensing", "satellite" ]
license = "Apache-2.0"
authors = [ { name = "Francisco Dorr" } ]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "attrs>=25.4",
  "cattrs>=26.1",
  "filelock>=3",
  "geopandas>=1.1.2",
  "majortom-eg",
  "numpy",
  "obstore>=0.9.3",
  "odc-geo>=0.5.1",
  "openpyxl>=3.1.5",
  "pandas>=3.0.1",
  "pandera[geopandas]>=0.24",
  "pyarrow>=23.0.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "pyhdf>=0.11.6",
  "pyproj>=3.7.1",
  "pyresample>=1.35",
  "pystac-client>=0.8",
  "python-geotiepoints>=1.9",
  "pyyaml>=6.0.3",
  "returns[compatible-mypy]>=0.26",
  "rich>=13",
  "rtree>=1.4.1",
  "scikit-learn>=1.8",
  "shapely>=2.1.2",
  "structlog>=25.5",
  "typer>=0.12",
  "utm>=0.8.1",
]
optional-dependencies.docs = [ "mkdocs-material>=9", "mkdocs-minify-plugin>=0.8", "mkdocstrings[python]>=0.24" ]
optional-dependencies.serverless = [ "boto3>=1.34" ]
urls.Documentation = "https://frandorr.github.io/aereo"
urls.Homepage = "https://github.com/frandorr/aereo"
urls.Issues = "https://github.com/frandorr/aereo/issues"
urls.Repository = "https://github.com/frandorr/aereo"
entry-points."aereo.plugins".process_composite = "aereo.builtins.processor:Composite"
entry-points."aereo.plugins".process_ndvi = "aereo.builtins.processor:NDVI"
entry-points."aereo.plugins".process_normalize = "aereo.builtins.processor:Normalize"
entry-points."aereo.plugins".process_qa_mask = "aereo.builtins.processor:QAMask"
entry-points."aereo.plugins".process_select_bands = "aereo.builtins.processor:SelectBands"
entry-points."aereo.plugins".read_odc_stac = "aereo.builtins.read:ReadODCSTAC"
entry-points."aereo.plugins".reproject_odc = "aereo.builtins.reproject:ReprojectODC"
entry-points."aereo.plugins".search_stac = "aereo.builtins.search:SearchSTAC"
entry-points."aereo.plugins".write_geotiff = "aereo.builtins.write:WriteGeoTIFF"

[dependency-groups]
dev = [
  "basedpyright>=1.38",
  "cartopy>=0.25",
  "graphviz>=0.21",
  "icechunk>=2.0.3",
  "ipykernel>=7.2",
  "jupyter>=1.1.1",
  "marimo[mcp]>=0.21.1",
  "matplotlib>=3.10.8",
  "nbformat>=5.10.4",
  "obstore>=0.9.3",
  "planetary-computer>=1",
  "polylith-cli>=1.42.5,<2",
  "pytest>=9.0.2,<10",
  "pytest-cov>=6",
  "python-semantic-release>=10.5.3,<11",
  "rioxarray>=0.22",
  "satpy>=0.59",
  "types-requests>=2.32.4.20260107,<3",
  "virtualizarr>=2.4",
  "xarray>=2026.4",
]
ci = [
  "basedpyright>=1.38",
  "pytest>=9.0.2,<10",
  "pytest-cov>=6",
  "ruff>=0.11",
]

[tool.hatch]
build.dev-mode-dirs = [ "components", "bases", "development", "../majortom", "." ]
metadata.allow-direct-references = true

[tool.uv]
sources.aereo = { path = "projects/aereo", editable = true }
managed = true
workspace.members = [ "projects/*" ]

[tool.pytest]
ini_options.testpaths = [ "test" ]
ini_options.norecursedirs = [
  ".git",
  ".venv",
  ".local_ci_env",
  "site",
  "dist",
  "build",
  "*.egg-info",
  "__pycache__",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
]
ini_options.markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

[tool.coverage]
run.branch = true
run.omit = [
  "*/.venv/*",
  "*/__pycache__/*",
  "*/build/*",
  "*/development/*",
  "*/dist/*",
  "*/site/*",
  "*/test*",
]
run.source = [ "bases", "components" ]
report.exclude_also = [
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
]
report.fail_under = 0
report.show_missing = true
report.skip_covered = false
html.directory = "htmlcov"

[tool.basedpyright]
exclude = [
  "examples/",
  "site/",
  ".venv/",
  "test/",
  "build/",
  "docs/examples/",
  "docs/examples/legacy/",
  "development/local/",
]
typeCheckingMode = "basic"
reportMissingTypeStubs = false
pythonVersion = "3.12"
autoImportCompletions = true
useLibraryCodeForTypes = true
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingImports = false
extraPaths = [ "components", "bases", "development" ]

[tool.polylith]
bricks."components/aereo/eoids" = "aereo/eoids"
bricks."components/aereo/grid" = "aereo/grid"
bricks."components/aereo/interfaces" = "aereo/interfaces"
bricks."components/aereo/registry" = "aereo/registry"
bricks."components/aereo/schemas" = "aereo/schemas"
bricks."components/aereo/spatial" = "aereo/spatial"
bricks."components/aereo/asset_downloader" = "aereo/asset_downloader"
bricks."components/aereo/backends" = "aereo/backends"
bricks."components/aereo/serialization" = "aereo/serialization"
bricks."components/aereo/viz" = "aereo/viz"
bricks."bases/aereo/cli" = "aereo/cli"
bricks."bases/aereo/client" = "aereo/client"
bricks."bases/aereo/lambda_handler" = "aereo/lambda_handler"
