[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-polylith-bricks", "hatchling" ]

[project]
name = "aer-core"
version = "3.4.0"
description = "A modular, high-performance capability-graph framework for processing Earth Observation sensor data."
readme = "README.md"
keywords = [
  "earth-observation",
  "gis",
  "polylith",
  "remote-sensing",
  "satellite",
]
license = { text = "MIT" }
authors = [ { name = "Francisco Dorr", email = "fran.dorr@gmail.com" } ]
requires-python = ">=3.13"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "attrs>=25.4",
  "geopandas>=1.1.2",
  "pandas>=3.0.1",
  "pandera[geopandas]>=0.24",
  "pydantic-settings>=2.13.1",
  "pyproj>=3.7.1",
  "pyresample>=1.35",
  "pyyaml>=6.0.1",
  "returns[compatible-mypy]>=0.26",
  "shapely>=2.1.2",
  "structlog>=25.5",
  "utm>=0.8.1",
]
urls.Homepage = "https://github.com/frandorr/aer"
urls.Issues = "https://github.com/frandorr/aer/issues"
urls.Repository = "https://github.com/frandorr/aer"

[tool.hatch]
build.dev-mode-dirs = [ "../../components", "../../bases", "../../development", "." ]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = [ "aer" ]

[tool.polylith]
bricks."../../components/aer/bootstrap" = "aer/bootstrap"
bricks."../../components/aer/downloader" = "aer/downloader"
bricks."../../components/aer/search" = "aer/search"
bricks."../../components/aer/settings" = "aer/settings"
bricks."../../components/aer/spatial" = "aer/spatial"
bricks."../../components/aer/spectral" = "aer/spectral"
bricks."../../components/aer/temporal" = "aer/temporal"
bricks."../../components/aer/downloader_raw" = "aer/downloader_raw"
bricks."../../components/aer/downloader_aria2" = "aer/downloader_aria2"
bricks."../../components/aer/plugin" = "aer/plugin"
bricks."../../components/aer/extract" = "aer/extract"
bricks."../../bases/aer/download_api" = "aer/download_api"
