[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-polylith-bricks", "hatchling" ]

[project]
name = "aer-core"
version = "4.0.0"
description = "A modular, high-performance capability-graph framework for processing Earth Observation sensor data."
readme = "README.md"
keywords = [
  "earth-observation",
  "gis",
  "polylith",
  "remote-sensing",
  "satellite",
]
license = { text = "MIT" }
authors = [ { name = "Francisco Dorr", email = "fran.dorr@gmail.com" } ]
requires-python = ">=3.13"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "attrs>=25.4",
  "cattrs>=24.1",
  "geopandas>=1.1.2",
  "majortom-eg",
  "pandas>=3.0.1",
  "pandera[geopandas]>=0.24",
  "pyproj>=3.7.1",
  "shapely>=2.1.2",
  "structlog>=25.5",
  "utm>=0.8.1",
]
urls.Homepage = "https://github.com/frandorr/aer"
urls.Issues = "https://github.com/frandorr/aer/issues"
urls.Repository = "https://github.com/frandorr/aer"

[tool.hatch]
build.dev-mode-dirs = [ "../../components", "../../bases", "../../development", "." ]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = [ "aer" ]

[tool.polylith]
bricks."../../components/aer/data" = "aer/data"
bricks."../../components/aer/grid" = "aer/grid"
bricks."../../components/aer/interfaces" = "aer/interfaces"
bricks."../../components/aer/registry" = "aer/registry"
bricks."../../components/aer/repository" = "aer/repository"
bricks."../../components/aer/schemas" = "aer/schemas"
bricks."../../components/aer/spatial" = "aer/spatial"
bricks."../../components/aer/spectral" = "aer/spectral"
bricks."../../bases/aer/client" = "aer/client"
