[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-polylith-bricks", "hatchling" ]

[project]
name = "aer-downloader-aria2"
version = "1.0.0"
authors = [ { name = "Your Name" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "aer-core",
  "attrs>=24",
  "pandera[geopandas]>=0.24,<0.25",
  "pydantic-settings>=2",
  "pyresample>=1.20",
  "returns>=0.23",
  "structlog>=25.1,<26",
  "utm>=0.7",
]
entry-points."aer.plugins".aria2 = "aer.downloader_aria2.core:download_aria2"

[tool.hatch]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = [ "aer" ]

[tool.polylith]
bricks."../../components/aer/downloader_aria2" = "aer/downloader_aria2"
