[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-polylith-bricks", "hatchling" ]

[project]
name = "aer-downloader-aria2"
version = "1.1.0"
description = "aria2-based downloader plugin for AER"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Fran Dorr" } ]
requires-python = ">=3.13"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "aer-core",
  "attrs>=24",
  "pandera[geopandas]>=0.24,<0.25",
  "pydantic-settings>=2",
  "pyresample>=1.20",
  "returns>=0.23",
  "structlog>=25.1,<26",
  "utm>=0.7",
]
urls.Homepage = "https://github.com/frandorr/aer"
urls.Issues = "https://github.com/frandorr/aer/issues"
urls.Repository = "https://github.com/frandorr/aer"

[tool.hatch]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = [ "aer" ]

[tool.polylith]
bricks."../../components/aer/downloader_aria2" = "aer/downloader_aria2"
