[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-polylith-bricks", "hatchling" ]

[project]
name = "aer-lambda"
version = "1.0.0"
description = "AER Lambda container image — polylith project"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "aer-extract-remote>=1",
  "attrs>=25.4",
  "boto3>=1.34",
  "cattrs>=26.1",
  "geopandas>=1.1.2",
  "majortom-eg",
  "numpy",
  "odc-geo>=0.5.1",
  "pandas>=3.0.1",
  "pandera[geopandas]>=0.24",
  "pydantic>=2.12.5",
  "pyproj>=3.7.1",
  "shapely>=2.1.2",
  "structlog>=25.5",
  "utm>=0.8.1",
]

[tool.hatch]
build.dev-mode-dirs = [ "../../components", "../../bases", "../../development", "." ]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = [ "aer" ]

[tool.polylith]
bricks."../../bases/aer/lambda_handler" = "aer/lambda_handler"
bricks."../../components/aer/interfaces" = "aer/interfaces"
bricks."../../components/aer/schemas" = "aer/schemas"
bricks."../../components/aer/execution" = "aer/execution"
bricks."../../components/aer/serialization" = "aer/serialization"
bricks."../../components/aer/registry" = "aer/registry"
bricks."../../components/aer/grid" = "aer/grid"
bricks."../../components/aer/spatial" = "aer/spatial"
