[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-polylith-bricks", "hatchling" ]

[project]
name = "aer-product-modis-earthaccess"
version = "0.1.0"
authors = [ { name = "Your Name" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "aer-spectral-modis",
]
entry-points."aer.plugins".product_modis_earthaccess = "aer.product_modis_earthaccess.core:modis_earthaccess_plugin"

[tool.hatch]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = [ "aer" ]

[tool.uv]
sources.aer-spectral-modis = { workspace = true }

[tool.polylith]
bricks = {}
