[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-polylith-bricks", "hatchling" ]

[project]
name = "aer-search-earthaccess"
version = "0.1.0"
description = "Polylith project for the earthaccess search plugin"
authors = [ { name = "Your Name" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "attrs>=25.4,<26",
  "earthaccess>=0.16,<0.17",
  "geopandas>=1.1.2,<2",
  "pandas>=3.0.1,<4",
  "pandera[geopandas]>=0.24,<0.25",
  "shapely>=2.1.2,<3",
  "structlog>=25.5,<26",
]
entry-points."aer.plugins".earthaccess = "aer.search_earthaccess.core:search_earthaccess"

[tool.hatch]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = [ "aer" ]

[tool.polylith]
bricks."../../components/aer/search" = "aer/search"
bricks."../../components/aer/search_earthaccess" = "aer/search_earthaccess"
bricks."../../components/aer/settings" = "aer/settings"
bricks."../../components/aer/spatial" = "aer/spatial"
bricks."../../components/aer/spectral" = "aer/spectral"
bricks."../../components/aer/temporal" = "aer/temporal"
bricks."../../components/aer/plugin" = "aer/plugin"
