[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-polylith-bricks", "hatchling" ]

[project]
name = "aer-search-goes-aws"
version = "0.1.0"
authors = [ { name = "Your Name" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "attrs>=25.4,<26",
  "geopandas>=1.1.2,<2",
  "pandas>=3.0.1,<4",
  "pandera[geopandas]>=0.24,<0.25",
  "pydantic-settings>=2.13.1,<3",
  "pyproj>=3.7.1,<4",
  "pyresample>=1.35,<2",
  "returns[compatible-mypy]>=0.26,<0.27",
  "s3fs>=2025.2,<2026",
  "shapely>=2.1.2,<3",
  "structlog>=25.5,<26",
  "utm>=0.8.1,<0.9",
]
entry-points."aer.plugins".goes_aws = "aer.search_goes_aws.core:search_goes_aws"

[tool.hatch]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = [ "aer" ]

[tool.polylith]
bricks."../../components/aer/search" = "aer/search"
bricks."../../components/aer/search_goes_aws" = "aer/search_goes_aws"
bricks."../../components/aer/settings" = "aer/settings"
bricks."../../components/aer/spatial" = "aer/spatial"
bricks."../../components/aer/spectral" = "aer/spectral"
bricks."../../components/aer/temporal" = "aer/temporal"
bricks."../../components/aer/plugin" = "aer/plugin"
