[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-polylith-bricks", "hatchling" ]

[project]
name = "aer-spectral-modis"
version = "0.1.0"
authors = [ { name = "Your Name" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []
entry-points."aer.plugins".modis = "aer.spectral_modis.core:modis_plugin"

[tool.hatch]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = [ "aer" ]

[tool.polylith]
bricks = {}
