[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-polylith-bricks", "hatchling" ]

[project]
name = "aereo-batch"
version = "1.0.0"
description = "AEREO Batch execution backend for AWS Batch on EC2 Spot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34",
]

[tool.hatch]
build.dev-mode-dirs = [ "../../components", "../../bases", "../../development", "." ]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = [ "aereo" ]

[tool.polylith]
bricks."../../bases/aereo/batch_handler" = "aereo/batch_handler"
bricks."../../components/aereo/interfaces" = "aereo/interfaces"
bricks."../../components/aereo/schemas" = "aereo/schemas"
bricks."../../components/aereo/backends" = "aereo/backends"
bricks."../../components/aereo/serialization" = "aereo/serialization"
bricks."../../components/aereo/registry" = "aereo/registry"
bricks."../../components/aereo/grid" = "aereo/grid"
bricks."../../components/aereo/spatial" = "aereo/spatial"
bricks."../../components/aereo/eoids" = "aereo/eoids"
bricks."../../components/aereo/asset_downloader" = "aereo/asset_downloader"
