[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-polylith-bricks", "hatchling" ]

[project]
name = "aereo-extract"
version = "1.0.0"
description = "AEREO remote extraction runtime — HTTP and AWS Lambda handler"
readme = "README.md"
keywords = [ "aereo", "earth-observation", "lambda", "remote-sensing", "satellite" ]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "aereo",
  "boto3>=1.34",
  "structlog>=25.5",
]
urls.Documentation = "https://frandorr.github.io/aereo"
urls.Homepage = "https://github.com/frandorr/aereo"
urls.Issues = "https://github.com/frandorr/aereo/issues"
urls.Repository = "https://github.com/frandorr/aereo"
scripts.aereo-extract-server = "aereo_extract.runtime:main"

[tool.hatch]
build.dev-mode-dirs = [ "../../components", "../../bases", "../../development", "." ]
build.hooks.polylith-bricks = {}
build.targets.wheel.packages = [ "aereo" ]

[tool.polylith]
bricks."../../components/aereo/interfaces" = "aereo/interfaces"
bricks."../../components/aereo/schemas" = "aereo/schemas"
bricks."../../components/aereo/backends" = "aereo/backends"
bricks."../../components/aereo/cache" = "aereo/cache"
bricks."../../components/aereo/serialization" = "aereo/serialization"
bricks."../../components/aereo/pipeline" = "aereo/pipeline"
bricks."../../components/aereo/registry" = "aereo/registry"
bricks."../../components/aereo/grid" = "aereo/grid"
bricks."../../components/aereo/spatial" = "aereo/spatial"
bricks."../../components/aereo/storage" = "aereo/storage"
bricks."../../components/aereo/eoids" = "aereo/eoids"
bricks."../../components/aereo/asset_downloader" = "aereo/asset_downloader"
bricks."../../components/aereo_extract" = "aereo_extract"
